[gd_scene load_steps=16 format=3 uid="uid://brqg4acqnuqkl"]

[ext_resource type="Script" path="res://GameData/NPC/idiot_6_arrow_cap.gd" id="1_5uxt1"]
[ext_resource type="PackedScene" uid="uid://cag47cfeu1s5v" path="res://GameData/3D/6ArrowIdiot/6ArrowIdiot.glb" id="1_c7bfx"]
[ext_resource type="Animation" uid="uid://csh2u1olpw78p" path="res://GameData/3D/6ArrowIdiot/idl.res" id="3_5uxt1"]
[ext_resource type="Animation" uid="uid://o2v6dqg4w1l5" path="res://GameData/3D/6ArrowIdiot/idl_GetHit.res" id="4_uv5px"]
[ext_resource type="Animation" uid="uid://dmki2xsbwbeh7" path="res://GameData/3D/6ArrowIdiot/idl_hit.res" id="5_xw82f"]
[ext_resource type="AudioStream" uid="uid://btbtcmpf6umfq" path="res://GameData/Sounds/hulo.wav" id="6_xw82f"]
[ext_resource type="AudioStream" uid="uid://3y5d6sxkqkqa" path="res://GameData/Sounds/DIE.wav" id="7_mg3wa"]
[ext_resource type="Script" path="res://addons/UniParticles3D/UniParticles3D.gd" id="8_xqrbo"]
[ext_resource type="Texture2D" uid="uid://cupcexdoolm7q" path="res://GameData/Image/muzzle.png" id="9_46gg4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_46xxi"]
radius = 1.13867
height = 3.59023

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5uxt1"]
_data = {
"idl": ExtResource("3_5uxt1"),
"idl_GetHit": ExtResource("4_uv5px"),
"idl_hit": ExtResource("5_xw82f")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_c7bfx"]
height = 0.0992357
radius = 2.10343

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uv5px"]
radius = 28.2201

[sub_resource type="Gradient" id="Gradient_xqrbo"]
offsets = PackedFloat32Array(0.147287, 0.317829, 0.710594, 1)
colors = PackedColorArray(0, 0, 0, 0.458824, 0.776471, 0.407843, 0.0980392, 0.458824, 0.6, 0.25098, 0.027451, 0.458824, 0.52549, 0.286275, 0.231373, 0.458824)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_46gg4"]
gradient = SubResource("Gradient_xqrbo")
use_hdr = true

[node name="Idiot6ArrowCap" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00964, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_5uxt1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.801586, 0)
shape = SubResource("CapsuleShape3D_46xxi")

[node name="6ArrowIdiot" parent="." instance=ExtResource("1_c7bfx")]
transform = Transform3D(0.691742, 0, 0, 0, 0.691742, 0, 0, 0, 0.691742, 0, -0.31955, 0)

[node name="anim" type="AnimationPlayer" parent="6ArrowIdiot"]
libraries = {
"cfp": SubResource("AnimationLibrary_5uxt1")
}

[node name="IdiotArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="IdiotArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.073904, -0.347201, 0)
shape = SubResource("CylinderShape3D_c7bfx")

[node name="FightArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FightArea"]
shape = SubResource("CylinderShape3D_uv5px")

[node name="hit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_xw82f")
bus = &"Effect"

[node name="die" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_mg3wa")
bus = &"Voice"

[node name="UniParticles3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.56296, 0)
script = ExtResource("8_xqrbo")
start_speed_constant = 1.0
start_size_constant = Vector2(10, 10)
enable_play_behavior = Vector2i(1, 1)
enable_shape = Vector2i(1, 1)
radius = 2.595
angle = 28.5
random_direction = 0.265
spherize_direction = 0.2
emit_from = 1
shape_length = 7.015
orbit_around_axis = Vector3(0.795, 9.325, 0.355)
enable_color_over_lifetime = Vector2i(1, 1)
color_over_lifetime = SubResource("GradientTexture1D_46gg4")
enable_rendering = Vector2i(1, 1)
particle_texture = ExtResource("9_46gg4")
tint_color = Color(0.796657, 0.287698, 0.0867218, 1)
velocity_stretch = -0.395
length_stretch = 0.09
sampling_filter = 1

[connection signal="body_entered" from="IdiotArea" to="." method="_on_idiot_area_body_entered"]
[connection signal="body_exited" from="IdiotArea" to="." method="_on_idiot_area_body_exited"]
[connection signal="body_entered" from="FightArea" to="." method="_on_fight_area_body_entered"]
[connection signal="body_exited" from="FightArea" to="." method="_on_fight_area_body_exited"]
